welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: '<-' expected but ')' found.
    for (i<0 to diag){
                    ^Diagonal:16: error: illegal start of simple expression
  }
  ^